--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "react": "^16.14.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.14.0",
+    "react-gradient-progress": "^1.0.3",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0",
-    "react-sweet-progress": "^1.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typeit-react": "^0.1.3"
